Change buttons from string to enum.Create Button enum.